新增一个备份结果http接口，新增一个备份结果展示界面

--- a/sql/static/dbaprinciples.html
+++ b/sql/static/dbaprinciples.html
@@ -2,5 +2,7 @@
 
 {% block content %}
 <h4>请认真阅读SQL审核规则：</h4>
-https://github.com/jly8866/archer/raw/master/docs/mysql_db_design_guide.docx
+<a href=/static/mysql_alteration_system_user_guide.pdf> 点此阅读 MySQL数据库变更管理系统操作说明 </a>
+</br>
+<a href=/static/mysql_db_design_guide.pdf> 点此阅读 MySQL数据库设计规范</a>
 {% endblock content %}
