提交SQL页面，是否备份默认选是；detail.html，审核人之间加了个空格

--- a/sql/static/detail.html
+++ b/sql/static/detail.html
@@ -37,7 +37,7 @@
 							{{workflowDetail.engineer}}
 						</td>
 						<td>
-                            {{listAllReviewMen.0}} {{listAllReviewMen.1}}
+                            {{listAllReviewMen.0}} &nbsp; {{listAllReviewMen.1}}
 						</td>
 						<td>
 							{{workflowDetail.cluster_name}}
