--- a/sql/static/submitSql.html
+++ b/sql/static/submitSql.html
@@ -31,8 +31,8 @@
 				</div>
 				<div class="form-group">
 					<select id="is_backup" name="is_backup" class="selectpicker show-tick form-control bs-select-hidden" data-name="是否选择备份" data-placeholder="请选择是否要备份:" required>
-          				<option value="is-empty" disabled="" selected="selected">请选择是否要备份:</option>
-          				<option value="是">是</option>
+          				<option value="is-empty" disabled="">请选择是否要备份:</option>
+          				<option value="是" selected="selected">是</option>
           				<option value="否">否</option>
         			</select>	
 				</div>
