修复“备份集大小”显示错误的问题

--- a/sql/static/backupCheck.html
+++ b/sql/static/backupCheck.html
@@ -97,7 +97,7 @@
 							{{record.input_size}}
 						</td>
 						<td>
-							{{record.input_size}}
+							{{record.output_size}}
 						</td>
 						<td>
 							{{record.comments}}
