--- a/sql/static/detail.html
+++ b/sql/static/detail.html
@@ -64,7 +64,7 @@
 				</tbody>
 			</table>
 
-			<table class="table table-striped table-hover">
+			<table class="table table-striped table-hover" width='100%' style='table-layout:fixed;'>
 				<thead>
 					<tr>
 						<th width="40px">
@@ -73,7 +73,7 @@
 						<th>
 							SQL内容
 						</th>
-						<th width="110px">
+						<th>
 							自动审核结果
 						</th>
 						<th width="110px">
@@ -92,16 +92,16 @@
 					<tr>
 						<td>
 						{% if forloop.last %}
-							<input type="hidden" id="sqlMaxRowNumber" value="{{row.0}}">
+							<input type="hidden" id="sqlMaxRowNumber" value="{{forloop.counter}}">
 						{% endif %}
 							{{forloop.counter}}
 						</td>
-					   <td>
+					   <td style='word-wrap:break-word;'>
 	 						{% for sql in row.5 %}
  								{{ sql }}{% if not forloop.last %}<br/>{% endif %}
 							{% endfor %}
 	 					</td>
- 						<td>
+ 						<td style='word-wrap:break-word;'>
 							{% for statement in row.4 %}
 								{{ statement }}{% if not forloop.last %}<br/>{% endif %}
 							{% endfor %}
@@ -127,7 +127,7 @@
 										{% csrf_token %}
 										<input type="hidden" name="workflowid" value="{{workflowDetail.id}}">
 										<!--<input type="hidden" id="sqlID_{{row.0}}" value="{{row.0}}">-->
-										<button id="btnstop_{{row.0}}" value="{{row.0}}" type="button" class="close" style="display: none" title="停止pt-OSC进程">
+										<button id="btnstop_{{forloop.counter}}" value="{{forloop.counter}}" type="button" class="close" style="display: none" title="停止pt-OSC进程">
 										 <span aria-hidden="true">&times;</span>
 										 <span class="sr-only"></span>
 										</button>
