修改回滚SQL逻辑，可以由该工单的申请人、审核人、副审核人提交回滚申请，提交时可以修改SQL内容等要素。 新增：在提交给inception之前，预先识别一些Inception不能正确审核的SQL,比如"alter table t1;"或"alter table test.t1;" 以免导致inception core dump

--- a/sql/static/base.html
+++ b/sql/static/base.html
@@ -114,6 +114,7 @@
 	<script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'dist/js/bootstrap-select.js' %}"></script>
 	<script src="{% static 'user/js/detail.js' %}"></script>
+	<script src="{% static 'user/js/rollback.js' %}"></script>
 	<script src="{% static 'user/js/autoreview.js' %}"></script>
 	<script src="{% static 'user/js/submitsql.js' %}"></script>
 	<script src="{% static 'highcharts/highcharts.js' %}"></script>
